--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -49,6 +49,7 @@
     border-top: 0;
     border-bottom: 0;
     border-right: 0;
+    vertical-align: center;
   }
 
   .container {
@@ -145,6 +146,11 @@
 
   .greens h4,
   .author {
+    margin-left: 10px;
+  }
+
+  .price {
+    color: lightgrey;
     margin-left: 10px;
   }
 }
