--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -26,7 +26,7 @@
   }
 
   .ads {
-    display: block;
+    display: grid;
     background: #fd3;
     grid-template-columns: 1fr;
     height: 53px;
@@ -136,12 +136,12 @@
   }
 
   .img-section {
-    width: 180px;
+    width: 100px;
   }
 
   .greens {
     display: flex;
-    margin-bottom: -80px;
+    margin-bottom: -150px;
   }
 
   .greens h4,
@@ -149,9 +149,53 @@
     margin-left: 10px;
   }
 
+  .greens h4 {
+    font-size: 10px;
+  }
+
   .price {
     color: lightgrey;
     margin-left: 10px;
+  }
+
+  .section1 .wrapper .green1 a div {
+    background: url(../images/section1-1.jfif) no-repeat;
+    background-size: contain;
+  }
+
+  .section1 .wrapper .green2 a div {
+    background: url(../images/section1-2.jfif) no-repeat;
+    background-size: contain;
+  }
+
+  .section1 .wrapper .green3 a div {
+    background: url(../images/section1-3.png) no-repeat;
+    background-size: contain;
+  }
+
+  .section1 .wrapper .green4 a div {
+    background: url(../images/section1-4.jfif) no-repeat;
+    background-size: contain;
+  }
+
+  .section1 .wrapper .green5 a div {
+    background: url(../images/section1-5.png) no-repeat;
+    background-size: contain;
+  }
+
+  .section1 .wrapper .green6 a div {
+    background: url(../images/section1-6.jfif) no-repeat;
+    background-size: contain;
+  }
+
+  .section1 .wrapper .green7 a div {
+    background: url(../images/section1-7.jfif) no-repeat;
+    background-size: contain;
+  }
+
+  .section1 .wrapper .green8 a div {
+    background: url(../images/section1-8.png) no-repeat;
+    background-size: contain;
   }
 }
 
