--- a/css/styles.css
+++ b/css/styles.css
@@ -687,3 +687,28 @@ footer .legal {
   margin-top: 12px;
   font-size: 16px;
 }
+
+.mini-text {
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+
+.mini-mini-text {
+  display: flex;
+  margin-left: 2px;
+}
+
+.mini-text h3 {
+  margin-bottom: 10px;
+  margin-top: 5px;
+}
+
+.hours-ago {
+  margin-left: 10px;
+}
+
+.popluarity {
+  font-size: 8px;
+  margin-left: 3px;
+  margin-top: -120px;
+}
