--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -169,7 +169,7 @@
   }
 
   .section1 .wrapper .green3 a div {
-    background: url(../images/section1-3.png) no-repeat;
+    background: url(../images/section1-3.jfif) no-repeat;
     background-size: contain;
   }
 
@@ -179,7 +179,7 @@
   }
 
   .section1 .wrapper .green5 a div {
-    background: url(../images/section1-5.png) no-repeat;
+    background: url(../images/section1-5.jfif) no-repeat;
     background-size: contain;
   }
 
@@ -194,7 +194,7 @@
   }
 
   .section1 .wrapper .green8 a div {
-    background: url(../images/section1-8.png) no-repeat;
+    background: url(../images/section1-8.jfif) no-repeat;
     background-size: contain;
   }
 }
@@ -315,5 +315,45 @@
   .blue h2,
   .yellow h2 {
     font-size: 20px;
+  }
+
+  .section1 .wrapper .green1 a div {
+    background: url(../images/section1-1.jfif) no-repeat;
+    background-size: cover;
+  }
+
+  .section1 .wrapper .green2 a div {
+    background: url(../images/section1-2.jfif) no-repeat;
+    background-size: cover;
+  }
+
+  .section1 .wrapper .green3 a div {
+    background: url(../images/section1-1.jfif) no-repeat;
+    background-size: cover;
+  }
+
+  .section1 .wrapper .green4 a div {
+    background: url(../images/section1-4.jfif) no-repeat;
+    background-size: cover;
+  }
+
+  .section1 .wrapper .green5 a div {
+    background: url(../images/section1-5.jfif) no-repeat;
+    background-size: cover;
+  }
+
+  .section1 .wrapper .green6 a div {
+    background: url(../images/section1-6.jfif) no-repeat;
+    background-size: cover;
+  }
+
+  .section1 .wrapper .green7 a div {
+    background: url(../images/section1-7.jfif) no-repeat;
+    background-size: cover;
+  }
+
+  .section1 .wrapper .green8 a div {
+    background: url(../images/section1-8.jfif) no-repeat;
+    background-size: cover;
   }
 }
